# markdown2canvas

./: .buildinfo  .gitattributes  .gitignore  README.md  canvas_objects.html  emoji.html  exceptions.html  free_functions.html  genindex.html  gotchas.html  history.html  index.html  making_links_to_existing_content.html  markdown2canvas.html  markdown_1.html  objects.inv  on_meta_dot_json.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  unit_tests.html  wishlist.html
_sources/: canvas_objects.rst.txt  history.rst.txt  markdown2canvas.rst.txt  markdown_1.rst.txt  on_meta_dot_json.rst.txt
_static/: bizstyle.js
doc/: index.rst  wishlist.rst
docs/: classes.rst  conf.py  emoji.rst  exceptions.rst  free_functions.rst  gotchas.rst  index.rst  making_links_to_existing_content.rst  markdown2canvas.rst  markdown_1.rst  on_meta_dot_json.rst  requirements.txt  unit_tests.rst
markdown2canvas/: __init__.py  canvas2markdown.py  canvas_objects.py  course_interaction_functions.py  exception.py  logging.py  setup_functions.py  tool.py  translation_functions.py
snippets/: publication_process_document.html
test/: Untitled.ipynb  canvas_url.py  course_id.py  example_translate.py  playground.ipynb  test_assignment.py  test_download_course_to_markdown.py  test_download_pages_to_markdown.py  test_droplets.py  test_file.py  test_image.py  test_link.py  test_link_to_local_file.py  test_page.py  test_page_in_module.py  test_replacements.py  test_style.py  test_translate.py  test_upload.py
tutorials/: making_your_first_course.html  publishing_content.html  (+7 more)
(+82 files in other folders)
